--- a/spec_insert/lib/renderers/templates/spec_insert.mustache
+++ b/spec_insert/lib/renderers/templates/spec_insert.mustache
@@ -1,7 +1,7 @@
 <!-- spec_insert_start
-{{#spec_insert_args}}
-    {{{key}}}: {{{value}}}
-{{/spec_insert_args}}
+{{#arguments}}
+{{{key}}}: {{{value}}}
+{{/arguments}}
 -->
-{{{spec_insert_content}}}
+{{{content}}}
 <!-- spec_insert_end -->
